--- a/Problem2/src/components/RangeSlider.module.scss
+++ b/Problem2/src/components/RangeSlider.module.scss
@@ -78,3 +78,29 @@ input[type="range"] {
   width: var(--progress-width);
   left: var(--progress-left);
 }
+
+
+.sliderStep {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background-color:  #47B647;
+  ;
+  z-index: 0;
+  // appearance: none;
+}
+
+.sliderTrack {
+  display: flex;
+  justify-content: space-between; /* Distributes markers evenly */
+  align-items: center;
+  position: relative;
+  padding: 10px;
+  width: 100%;
+  height: 8px;
+  border-radius: 3px;
+  box-sizing: border-box;
+}
